--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
     /* --------
-         Color Palette
+         Color Palette. Looks very messy, must be reworked.
     -------- */
 
     /* text */
@@ -27,7 +27,13 @@ body {
     /* actions */
 
     --button-main-color: #4D5AE5;
+    --button-hover-color: #404BBF;
+
+    --filter-main-color: #F4F4FD;
+    --filter-active-color: #404BBF;
+
     --button-text-color: #FFFFFF;
+    --filter-text-color: #4D5AE5;
 
     --selector-active-color: #404BBF;
     --selector-inactive-color: #F4F4FD;
@@ -43,6 +49,8 @@ body {
         End of Palette block
     -------- */
 
+
+    /* Backgrounds color, hovers e.t.c. added just for visual purposes. Will be remade. */
 
     background-color: var(--background-page-color);
     color: var(--text-primary-color);
@@ -72,7 +80,10 @@ body {
 }
 
 .item-text {
-    color: var(--text-primary-color); /*fix for link in team block. Delete if no link*/
+
+    /* Temporary fix for a text wrapped with link in a team block (styles inherited from user-agent).  */
+    /* Will be deleted because team items doesn't look like a link on next mockups*/
+    color: var(--text-primary-color);
 }
 
 .section {
@@ -106,12 +117,43 @@ body {
 }
 
 .button {
-    color: var(--button-text-color);
-    background-color: var(--button-main-color);
 
     font-weight: 500;
     letter-spacing: 0.04em;
 }
+
+.button.primary {
+    color: var(--button-text-color);
+    background-color: var(--button-main-color);
+
+}
+
+.button.primary:hover,
+.button.primary:focus {
+    background-color: var(--button-hover-color);
+
+}
+
+/* It`s unclear is blue color of filter button represents a      hover effect, or it`s is-active state of filter.  */
+/* So leave this implementation */
+
+.button.filter {
+    background-color: var(--filter-main-color);
+    color: var(--filter-text-color);
+
+}
+
+.button.filter:hover,
+.button.filter:focus {
+    background-color: var(--filter-active-color);
+    color: var(--button-text-color);
+
+}
+
+/* .button.filter:hover,
+.button.filter:focus{
+
+} */
 
 
 
@@ -224,7 +266,3 @@ body {
 .footer>.logo:focus {
     color: var(--navlink-active-color);
 }
-
-/* .footer-text {
-
-} */
