--- a/css/styles.css
+++ b/css/styles.css
@@ -56,9 +56,12 @@ body {
     color: var(--text-primary-color);
 
     font-family: 'Roboto', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
+    
+    /* Browser predefined, Google Chrome v.108 */
+    /* font-weight: 400; */
+    /* font-style: normal; */
+    /* font-size: 16px; */
+
     line-height: 1.5;
     letter-spacing: 0.02em;
 
@@ -93,9 +96,11 @@ body {
 /* A little bit positioning. Just for temporary managing of margin overflow */
 .section-title {
     color: var(--header-text-color);
+    
+    /* Browser predefined, Google Chrome v.108 */
+    /* font-weight: 700; */
 
-    font-weight: 700;
-    font-size: 36px;
+    font-size: 36px; */
     line-height: 1.11px;
     text-transform: capitalize;
 }
@@ -120,6 +125,8 @@ body {
 
     font-weight: 500;
     letter-spacing: 0.04em;
+
+    cursor: pointer;
 }
 
 .button.primary {
@@ -134,7 +141,7 @@ body {
 
 }
 
-/* It`s unclear is blue color of filter button represents a      hover effect, or it`s is-active state of filter.  */
+/* It`s unclear is blue color of filter button represents a hover effect, or it`s is-active state of filter.  */
 /* So leave this implementation */
 
 .button.filter {
@@ -149,13 +156,6 @@ body {
     color: var(--button-text-color);
 
 }
-
-/* .button.filter:hover,
-.button.filter:focus{
-
-} */
-
-
 
 /* Header Section */
 
@@ -226,7 +226,9 @@ body {
 .hero-title {
     color: #FFFFFF;
 
-    font-weight: 700;
+    /* Browser predefined, Google Chrome v.108 */
+    /* font-weight: 700; */
+    
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
