--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@ body {
     /* Browser predefined, Google Chrome v.108 */
     /* font-weight: 700; */
 
-    font-size: 36px; */
+    font-size: 36px; 
     line-height: 1.11px;
     text-transform: capitalize;
 }
@@ -228,7 +228,7 @@ body {
 
     /* Browser predefined, Google Chrome v.108 */
     /* font-weight: 700; */
-    
+
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
