--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,7 @@ body {
 }
 
 .button {
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: 500;
     font-style: normal;
